Update: fix minor spacing issue

--- a/src/styles/ProfileBanner.scss
+++ b/src/styles/ProfileBanner.scss
@@ -2,6 +2,7 @@ div.profile-banner {
   position: relative;
   width: 100%;
   height: 30rem;
+  margin-bottom: 2rem;
 
   display: flex;
   flex-flow: row nowrap;
