--- a/src/styles/ProfileBio.scss
+++ b/src/styles/ProfileBio.scss
@@ -1,6 +1,6 @@
 div.profile-bio {
   width: 100%;
-  padding: 2rem;
+  padding: 0 2rem 2rem;
   display: flex;
   flex-flow: column nowrap;
   gap: 1rem;
